12-kubernetes-05-cni/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-traffic-from-ubuntu-host
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: hello-deployment
  ingress:
  - from:
    - ipBlock:
        cidr: 192.168.88.39/32
    ports:
    - protocol: TCP
      port: 8080
